tests/extended_test_suite/negative/rebind_vars.gp
###### testing semantic checking of rebind errors ######
int var_a = 2;
int var_a = 3;